Add Angular Material

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,7 @@
-<div class="login"></div>
-<div>
-  <a [routerLink]="'/register'">ثبت نام</a>
+<div id="frame">
+  <div id="login">
+    <div>
+      <a [routerLink]="'/register'">ثبت نام</a>
+    </div>
+  </div>
 </div>
