--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -11,7 +11,7 @@
 }
 
 .example-header-image {
-    background-image: url('../../../assets/images/food.icon.png');
+    background-image: url('../../assets/images/food.icon.png');
     background-size: cover;
 }
 
@@ -38,5 +38,3 @@ button{
     
     margin: 0 8px;
 }
-
-  
