--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
           <input class="username" type="password" matInput [formControl]="password" 
                  placeholder="کلمه عبور">
           <!-- <mat-hint>کلمه عبور را وارد کنید</mat-hint> -->
-          <mat-error *ngIf="username.hasError('required')">
+          <mat-error *ngIf="password.hasError('required')">
             کلمه عبور الزامیست
           </mat-error>
           <mat-error *ngIf="password.hasError('minlength')">
