--- a/src/app/+components/login/login.component.css
+++ b/src/app/+components/login/login.component.css
@@ -1,9 +1,17 @@
 #frame {
     height: 100vh;
-    background-color: lightgray;
+    background-color: lightgray;    
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.back{
+    min-width: 100vw;
+    min-height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    filter: blur(3.5px);
 }
 
 .example-card {
@@ -30,6 +38,28 @@ img {
     width: 100%;
 }
 
-button{
+button {
     margin: 3px;
+}
+
+.colorOfButton {
+    background-color: rgba(47, 232, 60, 0.807) !important;
+}
+
+/* mat-card-title,
+mat-card-subtitle,
+button,
+mat-form-field,
+mat-label,
+mat-hint,
+mat-error{
+    font-family: persian;
+} */
+
+.example-section {
+    margin: 12px 0;
+}
+
+.example-margin {
+    margin: 0 12px;
 }
