--- a/src/app/+module/admin/+pages/navigation/navigation.component.html
+++ b/src/app/+module/admin/+pages/navigation/navigation.component.html
@@ -3,8 +3,9 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>مدیریت</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item [routerLink]="'users'">کاربران</a>
       <a mat-list-item href="#">درخواست های رستوران</a>
       <a mat-list-item href="#">رستوران ها</a>
       <a mat-list-item href="#">مشتری ها</a>
@@ -18,7 +19,7 @@
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">مدیریت</mat-icon>
+        <mat-icon aria-label="Side nav toggle icon"></mat-icon>
       </button>
       <span>سامانه سفارش غذا استارفود</span>
     </mat-toolbar>
