--- a/src/app/+module/restaurant/+pages/+components/my-requests/my-requests.component.html
+++ b/src/app/+module/restaurant/+pages/+components/my-requests/my-requests.component.html
@@ -1,5 +1,11 @@
 <div class="forButton">
-  <button (click)="create()" class="colorOfButton" mat-raised-button>رستوران جدید</button>
+  <button (click)="create()" class="colorOfButton" mat-raised-button>
+    رستوران جدید
+  </button>
   <!-- <button class="colorOfButton" mat-raised-button>بازگشت</button>
   <button class="colorOfButton" mat-raised-button>بازگشت</button> -->
 </div>
+<app-data-grid
+  [datasource]="restaurantAPI+'myrequestlist'"
+  [columns]="columns"
+></app-data-grid>
