--- a/src/app/+module/restaurant/+pages/+components/my-requests/new-restaurant/new-restaurant.component.css
+++ b/src/app/+module/restaurant/+pages/+components/my-requests/new-restaurant/new-restaurant.component.css
@@ -1,3 +1,15 @@
 .login-full-width {
     width: 100%;
 }
+
+/* .mat-mdc-dialog-container .mdc-dialog__title{} */
+/* .mat-mdc-dialog-container{
+
+    --mdc-dialog-subhead-font: persian;
+} */
+/* .mat-mdc-dialog-container {
+    --mdc-dialog-subhead-font: persian !important;
+} */
+/* .mat-mdc-dialog-container .mdc-dialog__title {
+    font-family: 'Persian';
+} */
