--- a/src/app/+components/+shared/data-grid/data-grid.component.css
+++ b/src/app/+components/+shared/data-grid/data-grid.component.css
@@ -1,7 +1,8 @@
 #dataGrid {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: persian;
     border-collapse: collapse;
     width: 100%;
+
 }
 
 #dataGrid td,
@@ -10,22 +11,80 @@
     padding: 8px;
 }
 
-#dataGrid tr:nth-child(even) {
+/* #dataGrid tr:nth-child(even) {
     background-color: #f2f2f2;
+} */
+
+#dataGrid th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: right;
+    background-color: rgba(25, 44, 185, 0.822);
+    color: white;
+}
+
+#dataGrid td button {
+    margin: 5px;
+}
+
+
+td:hover,
+th:hover {
+    background-color: #ddd;
+}
+
+td span button {
+    background-color: black;
+    color: white;
+    font-size: small;
+}
+
+#dataGrid td:first-of-type,
+th:first-of-type {
+    position: sticky;
+    right: 0;
+    background-color: white;
+    z-index: 100;
 }
 
 #dataGrid tr:hover {
     background-color: #ddd;
 }
 
-#dataGrid th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #04AA6D;
-    color: white;
+.checkbox-margin {
+    margin: 0 12px;
 }
 
-#dataGrid td button{
-    margin: 5px;
+/* td:nth-child(2),th:nth-child(2){
+    position: sticky;   
+    right: 0;
+    background-color: white;
+} */
+
+#search_input {
+    padding: 9px 14px;
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 3px;
+    border: none;
+    font-family: persian;
+}
+
+#search_input:focus {
+    outline: none;
+}
+
+mat-card-title,
+mat-card-subtitle,
+button,
+td,
+th mat-form-field,
+mat-label,
+mat-hint,
+mat-error {
+    font-family: persian;
+}
+.restaurantButton{
+    border-radius: 10px;
+    margin: 0 10px;
 }
