--- a/src/app/+components/admin-login/admin-login.component.css
+++ b/src/app/+components/admin-login/admin-login.component.css
@@ -46,7 +46,7 @@ button {
     background-color: rgba(47, 232, 60, 0.807) !important;
 }
 
-/* mat-card-title,
+mat-card-title,
 mat-card-subtitle,
 button,
 mat-form-field,
@@ -54,7 +54,7 @@ mat-label,
 mat-hint,
 mat-error{
     font-family: persian;
-} */
+}
 
 .example-section {
     margin: 12px 0;
