--- a/src/app/+components/login/login.component.css
+++ b/src/app/+components/login/login.component.css
@@ -46,7 +46,7 @@ button {
     background-color: rgba(47, 232, 60, 0.807) !important;
 }
 
-/* mat-card-title,
+mat-card-title,
 mat-card-subtitle,
 button,
 mat-form-field,
@@ -54,7 +54,7 @@ mat-label,
 mat-hint,
 mat-error{
     font-family: persian;
-} */
+} 
 
 .example-section {
     margin: 12px 0;
@@ -62,4 +62,13 @@ mat-error{
 
 .example-margin {
     margin: 0 12px;
+}
+
+.serverError{
+    color: black;
+    border: 1px solid red ;
+    text-align: center;
+    padding: 5px;
+    background-color: pink;
+    border-radius: 5px;
 }
