--- a/src/app/+module/admin/+pages/users/users.component.html
+++ b/src/app/+module/admin/+pages/users/users.component.html
@@ -1,5 +1,7 @@
 <app-data-grid
     [datasource]="'http://localhost:5175/request'"
-    [columns]="['username','fullname','email','verified','type']"
+    [columns]="columns"
+    (onDelete)="remove($event)"
+    (onEdit)="edit($event)"
 />
  
