--- a/src/app/+module/restaurant/+pages/+components/navigation/navigation.component.html
+++ b/src/app/+module/restaurant/+pages/+components/navigation/navigation.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>رستوران داری</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item [routerLink]="'merequests'">درخواست های من</a>
+      <a mat-list-item [routerLink]="'myrequests'">درخواست های من</a>
       <a mat-list-item href="#">رستوران های من</a>
       <a mat-list-item href="#">سفارش های من</a>
     </mat-nav-list>
@@ -20,6 +20,7 @@
         <mat-icon aria-label="Side nav toggle icon">منو</mat-icon>
       </button>
       <span>سامانه سفارش غذا استارفود</span>
+      <button (click)="exit()" class="exit">خروج</button>
     </mat-toolbar>
     <router-outlet></router-outlet>
 
